hard-gists/10005117/run.log
=== Docker Run Log for 10005117 ===
Started at: Mi 29. Okt 11:44:07 CET 2025

[2025-10-29 11:44:07] START: Running container for 10005117
[2025-10-29 11:44:08] SUCCESS: Container e9d3df0cb606020925bd6612dafbf3f08e7198816fdb12da15f47c3283bb2e14 started for 10005117
=== Container logs for 10005117 ===
  File "/snippet.py", line 17
    print "Not found model file path"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 10005117 ===
[2025-10-29 11:44:10] INFO: Container e9d3df0cb606020925bd6612dafbf3f08e7198816fdb12da15f47c3283bb2e14 has stopped
